--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
             <div class="s-header__branding">
                 <p class="site-title">
-                    <a href="index.html" rel="home">Spurgeon.</a>
+                    <a href="index.html" rel="home">Ruben Villarreal Jr.</a>
                 </p>
             </div>
 
