--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="s-header__branding">
                 <p class="site-title">
-                    <a href="index.html" rel="home">Spurgeon.</a>
+                    <a href="index.html" rel="home">Ruben Villarreal Jr</a>
                 </p>
             </div>
 
