--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   
   <body>
     <h1>RUBEN VILLARREAL JR</h1>
-    <p>This is my professional website. Currently, I'm a Trust and Safety specialist (officially a Crisis Response Coordinator) for Vaco SF, where I produce work for Google. What I like most about my job is finding creative ways to improve how <a href = "https://crisisresponse.google/" target = "_blank">Google's Crisis Response Project</a> responds to global risks. Some of my current projects for my work include a reference sheet of U.S. populations, sorted by localities, so that our team can accurately predict how many people are affected in any given situation. I've also worked on a help and information SQL database that stores and shows our team past emergency resources that we've used, in order to provide quicker response times to new crises.</p>
+    <p>This is my professional website. Currently, I'm a Trust and Safety specialist (officially a Crisis Response Coordinator) for Google. What I like most about my job is finding creative ways to improve how <a href = "https://crisisresponse.google/" target = "_blank">Google's Crisis Response Project</a> responds to global risks. Some of my current projects for my work include a reference sheet of U.S. populations, sorted by localities, so that our team can accurately predict how many people are affected in any given situation. I've also worked on a help and information SQL database that stores and shows our team past emergency resources that we've used, in order to provide quicker response times to new crises.</p>
     <p>On the "personal development"-side, I'm in the process of obtaining my Project Management Professional® certification from PMI. Afterward, I'm eyeing the CISSP from IMC<sup>2</sup>. Want to know more about my expertise? Check out my <a href = "https://www.linkedin.com/in/ruben-villarreal-jr/" target = "_blank">LinkedIn</a>.</p>
-    <p>Currently, I'm looking for a project or program manager position, specifically within trust and safety. If you'd like to talk to me, best way would be through <a href = "mailto: rubenvillarrealjr9@gmail.com">email</a>, or through my aforementioned LinkedIn.</p>
+    <p>If you'd like to talk to me, best way would be through <a href = "mailto: rubenvillarrealjr9@gmail.com">email</a>, or through my aforementioned LinkedIn.</p>
     <p>Promise to get back to you asap.</p>
     <footer>
-      <p>Copyright 2023</p>
+      <p>2023</p>
     </footer>
   </body>
   
